--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+
+/*navbar*/
+.logo-text{
+  font-size: 25px;
+  font-weight: 600;
+  color: red;
+ 
+}
+.bg-info{
+  background-color: yellowgreen !important;
+}
+.navbar-light .navbar-nav .nav-link {
+  color: black;
+  font-size: 20px;
+}
+.navbar-light .navbar-nav .nav-link:hover {
+  color: rgb(235, 17, 17);
+  font-size: 20px;
+}
+/*homeimg*/
+.home-img{
+  width: 100%;
+  height: 750px;
+}
+/*form*/
+.form-control{
+  font-weight: 500;
+}
+.form-label {
+  color: black;
+  margin-bottom: 0.5rem;
+  font-size: large;
+}
+
+/*login*/
+.login-container{
+  margin-top: 30px;
+}
+/*footer*/
+.footer{
+  background-color: yellowgreen;
+  width: 100%;
+  height: 50px;
+}
+
+.footer-text{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin: 10px;
+  font-size: 20px;
 }
